# Dawn

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/scripts/: get-version.sh
.github/workflows/: release.yml  run-container.yml
companies/: __init__.py
companies/ibm/: __init__.py
companies/jpmorgan/: __init__.py
companies/zoho/: __init__.py
core/: debug.py  logger.py  settings.py
dashboard/: package-lock.json  package.json  wrangler.jsonc
dashboard/api/: package-lock.json  package.json
dashboard/api/src/: server.ts
dashboard/api/src/types/: bindings.ts
dashboard/web/: package.json
dashboard/web/src/: App.tsx
dashboard/web/src/components/icons/: qrcode.tsx
dashboard/web/src/components/ui/: list.tsx  navbar.tsx
dashboard/web/src/hooks/: useJobsList.tsx
dashboard/web/src/styles/: main.scss
dashboard/web/src/styles/components/: list.scss  navbar.scss
dashboard/web/src/styles/include/: _colors.scss
db/: cuckoo.py  database.py  decorators.py
models/: jobdata.py
